fix to article img size on mobile & tablet

--- a/static/css/partials/_article.scss
+++ b/static/css/partials/_article.scss
@@ -142,9 +142,15 @@
 
 				figure.featured {
 					margin-top:12px;
-					height:440px;
-					width:960px;
 					position:relative;
+
+					height: 440px;
+					width: 960px;
+
+					@media screen and (max-width: $sm-break) {
+						height: 100%;
+						width: 100%;
+					}
 
 					>img {
 						width:100%;
